# ScreenTest-Studio

./: .dockerignore  .env.example  .gitignore  .tfyignore  Dockerfile  README.md  deploy.py  pyproject.toml  requirements-deploy.txt
docs/: deployment.md
src/screentest_studio/: api.py  crew.py  main.py  schemas.py  service.py
src/screentest_studio/config/: agents.yaml  tasks.yaml
web/: .env.example  package-lock.json  package.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/lib/: types.ts
